# SynDiff-AD

./: .gitmodules  README.md  environment.yml  pyproject.toml
lang-cond-task-adv-augmentation/: gaussian_starter.ipynb
lang-cond-task-adv-augmentation/GaussianTest/: gaussian_starter.ipynb
lang-cond-task-adv-augmentation/waymo_open_data_parser/: config.yaml  data_loader.py  parser.py  viz.py
lang_cond_task_adv_augmentation/ControlNet/: environment.yaml  gradio_seg.py
lang_cond_task_adv_augmentation/GaussianTest/: augmodel.pt  augmodel_T3.pt  classmodel.pt
lang_cond_task_adv_augmentation/avcv/: __init__.py  test.py  train.py
lang_cond_task_adv_augmentation/bdd100k/: bdd100k_env_conditions_train.csv  bdd_class_metadata.csv  compile_metadata.ipynb  data_loader.py  filenames_train_seg.txt  filenames_val_seg.txt  (+2 more)
waymo_data/: install_deeplab2.sh
xplane_training/: 0.2valwaypoint_data.pickle  0.3valwaypoint_data.pickle  0.4valwaypoint_data.pickle  afternoon_valwaypoint_data.pickle  afternoon_waypoint_testdata.pickle  eval_network.py  eval_prune.py  evaluate_tod.py  generate_adv_data_pytorch.py  label_to_pickle_test.py  label_to_pickle_train.py  label_to_pickle_val.py  morning_valwaypoint_data.pickle  morning_waypoint_testdata.pickle  mpc.py  night_valwaypoint_data.pickle  night_waypoint_testdata.pickle  plot_utils.py  taxinet_dataloader.py  taxinet_dataloader_evaltod.py  taxinet_dataloader_prune.py  train_taxinet_soft_vae.py  train_taxinet_vae.py  train_taxinet_waypoint.py  train_taxinet_waypoint_parallelized.py  utils.py  vae_space_viz.py  valwaypoint_data.pickle
(+518 files in other folders)
